# Veil

./: .gitignore  README.md
.github/workflows/: rust.yml
docs/: veil-architecture-rfc.md  veil-gmvpn-audit.md  veil-phase-map.md  veil-workspace-safety.md
prototypes/: README.md
prototypes/veil-rust/: Cargo.toml  README.md
prototypes/veil-rust/examples/policies/: deny-xray.json  prefer-eu-stable.json  strict-fallback.json
prototypes/veil-rust/veil-adapter-api/: Cargo.toml
prototypes/veil-rust/veil-adapter-api/src/: lib.rs
prototypes/veil-rust/veil-adapter-mock/: Cargo.toml
prototypes/veil-rust/veil-adapter-mock/src/: lib.rs
prototypes/veil-rust/veil-adapter-xray/: Cargo.toml
prototypes/veil-rust/veil-adapter-xray/src/: lib.rs
prototypes/veil-rust/veil-cli/: Cargo.toml
prototypes/veil-rust/veil-cli/src/: main.rs
prototypes/veil-rust/veil-core/: Cargo.toml
prototypes/veil-rust/veil-core/src/: lib.rs
prototypes/veil-rust/veil-diagnostics/: Cargo.toml
prototypes/veil-rust/veil-diagnostics/src/: lib.rs
prototypes/veil-rust/veil-dry-run/: Cargo.toml
prototypes/veil-rust/veil-dry-run/src/: lib.rs
prototypes/veil-rust/veil-manifest/: Cargo.toml
prototypes/veil-rust/veil-manifest/src/: lib.rs
prototypes/veil-rust/veil-policy/: Cargo.toml
prototypes/veil-rust/veil-policy/src/: lib.rs
prototypes/veil-rust/veil-routing/: Cargo.toml
prototypes/veil-rust/veil-routing/src/: lib.rs
prototypes/veil-rust/veil-transport/: Cargo.toml
prototypes/veil-rust/veil-transport/src/: lib.rs
