[workspace]
members = [
  "veil-core",
  "veil-adapter-api",
  "veil-adapter-xray",
  "veil-diagnostics",
  "veil-manifest",
  "veil-policy",
  "veil-routing",
  "veil-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
