[package]
name = "veil-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
veil-adapter-mock = { path = "../veil-adapter-mock" }
veil-adapter-xray = { path = "../veil-adapter-xray" }
veil-manifest = { path = "../veil-manifest" }
veil-policy = { path = "../veil-policy" }
veil-routing = { path = "../veil-routing" }
