[package]
name = "veil-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
veil-adapter-api = { path = "../veil-adapter-api" }
veil-adapter-mock = { path = "../veil-adapter-mock" }
veil-adapter-xray = { path = "../veil-adapter-xray" }
veil-diagnostics = { path = "../veil-diagnostics" }
veil-manifest = { path = "../veil-manifest" }
veil-policy = { path = "../veil-policy" }
veil-routing = { path = "../veil-routing" }
