[package]
name = "veil-diagnostics"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
veil-adapter-api = { path = "../veil-adapter-api" }
veil-manifest = { path = "../veil-manifest" }
veil-policy = { path = "../veil-policy" }
veil-routing = { path = "../veil-routing" }
